fix overlapping

--- a/style.css
+++ b/style.css
@@ -20,9 +20,6 @@ a{
     text-decoration: none;
     color: black; 
 }
-h2,h3{
-    margin-bottom: 10px;
-}
 
 input[type='text'],textarea:focus{
     outline: none;
@@ -31,7 +28,7 @@ input[type='text'],textarea:focus{
 header,footer{
     text-decoration: underline 2px solid;
     color: rgb(11, 13, 15);
-    padding: 1rem;
+    padding: 0.8rem;
 }
 #convertThis{
     border: 3px solid blueviolet;
@@ -74,14 +71,14 @@ header,footer{
     flex-direction: column;
 } 
 #contentBox>*{
-    margin-bottom: 1rem;
+    margin-bottom: 10px;
 }
 #output{
     min-height: 100px;
     border: 1px solid black;
 }
 .data{
-    padding: 1rem;
+    padding: 0.8rem;
 }
 #warn{
     color: rgb(238, 74, 9);
@@ -119,9 +116,6 @@ footer a{
 
 /* mobile */
 @media screen and (max-width:650px) {
-    header,footer{
-        padding: 0.8rem;
-    }
     .hero .container{
         width:350px;
     }
